--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,49 @@
 /* TODO: Make it awesome */
+.container {  display: grid;
+    grid-template-columns: 20% 1fr 1fr 1fr 20%;
+    grid-template-rows: 50px 1fr 1fr 50px;
+    grid-auto-columns: 1fr;
+    gap: 15px 15px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "header header header header header"
+      ". products products products ."
+      ". results results results ."
+      "footer footer footer footer footer";
+  }
+  
+  .header { grid-area: header; }
+  
+  .footer { grid-area: footer; }
+  
+  .results { grid-area: results; }
+  
+  .products { 
+    grid-area: products; 
+    display: flex;
+  }
+  
+  .header, .footer, .product1, .product2, .product3, .results { 
+    border: 1px solid black;
+  }
+  
+  img {
+    width: 150px;
+  }
+  
+  header {
+    background: gray;
+    text-align: center;
+    padding: 10px;
+  }
+  
+  footer {
+    background: gray;
+    text-align: center;
+    padding: 5px
+  }
+  
+  main {
+    background: lightseagreen;
+    
+  }
