--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,102 @@
-/* TODO: Make it awesome */
-.container {  display: grid;
-    grid-template-columns: 20% 1fr 1fr 1fr 20%;
-    grid-template-rows: 50px 1fr 1fr 50px;
-    grid-auto-columns: 1fr;
-    gap: 15px 15px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "header header header header header"
-      ". products products products ."
-      ". results results results ."
-      "footer footer footer footer footer";
-  }
-  
-  .header { grid-area: header; }
-  
-  .footer { grid-area: footer; }
-  
-  .results { grid-area: results; }
-  
-  .products { 
-    grid-area: products; 
-    display: flex;
-  }
-  
-  .header, .footer, .product1, .product2, .product3, .results { 
-    border: 1px solid black;
-  }
-  
-  img {
-    width: 150px;
-  }
-  
-  header {
-    background: gray;
-    text-align: center;
-    padding: 10px;
-  }
-  
-  footer {
-    background: gray;
-    text-align: center;
-    padding: 5px
-  }
-  
-  main {
-    background: lightseagreen;
-    
-  }
+/* Global Styles */
+body, html {
+  margin: 0;
+  font-family: "poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  background-color: #cacaca;
+}
+body {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+}
+img {
+  width: 100%;
+  border-radius: 5px; 
+
+}
+header {
+  background-color: #0063dc;
+  color: #ffffff;
+  padding: 10px;
+  text-align: center;
+  font-size: 24px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+header h1 {
+  text-transform: uppercase;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  letter-spacing: 1px;
+  font-size: 100px;
+  font-weight: 700;
+}
+nav {
+  background-color: #232f3e;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 0 20px 20px 20px;
+}
+nav ul {
+  list-style: none;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+ }
+
+ nav a {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-decoration: none;
+  flex-direction: row;
+  align-items: 'center';
+  font-family: Arial, Helvetica, sans-serif;
+  color: #ffffff;
+ }
+
+ nav a:hover {
+  color: rgb(251, 220, 22);
+ }
+
+main section {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 50px;
+  margin: 50px 50px 0 50px;
+}
+
+main section img {
+  max-width: 100%;
+  background-color: #f2f2f2; 
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+#chart-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  margin: 60px auto;
+  max-width: 1000px;
+  padding: 2%;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+#chart {
+  width: auto; 
+  height: auto; 
+}
+
+footer {
+  margin-top: 40px;
+  background-color: #232f3e;
+  color: #ffffff;
+  text-align: center;
+  padding: 40px;
+}
